@@ -5,16 +5,6 @@ for the document windows for the Web Services Tool application.
 Implements a standard toolbar.
 """
 
-# Note about multi-threading.
-# Although WST does its network stuff in a background thread, with Python 2.2
-# there are still moments where the app appears to hang briefly. This should
-# only be noticable when your DNS is slow-ish. The hang is caused by the
-# socket.getaddrinfo() function, which is used (indirectly) when connecting
-# to a server, which is a frequent operation when using xmlrpclib (it makes
-# a new connection for each request). Up to (and including) version 2.3b1,
-# Python would not grant time to other threads while blocking inside
-# getaddrinfo(). This has been fixed *after* 2.3b1 was released. (jvr)
-
 from AppKit import *
 from Foundation import *
 from PyObjCTools import NibClassBuilder
@@ -252,9 +242,7 @@ class WSTConnectionWindowController(NibClassBuilder.AutoBaseClass):
         """
         if not aMessage:
             aMessage = "Displaying information about %d methods." % len(self._methods)
-        # All UI calls should be directed to the main thread
-        self.statusTextField.performSelectorOnMainThread_withObject_waitUntilDone_(
-            "setStringValue:", aMessage, 0)
+        self.statusTextField.setStringValue_(aMessage)
     
     def startWorking(self):
         """Signal the UI there's work goin on."""
